[gd_scene load_steps=16 format=3 uid="uid://w6gdjcek5161"]

[ext_resource type="Texture2D" uid="uid://c804p0l5twdor" path="res://assets/visual/ui/menu_background.png" id="1_mxm8n"]
[ext_resource type="FontFile" uid="uid://bspmm0n21y6lk" path="res://assets/visual/ui/fonts/Adventurer.ttf" id="2_wy6cq"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="2_ylufq"]
[ext_resource type="Texture2D" uid="uid://ddj5uu5r6lqnw" path="res://godot_icon.svg" id="4_ja5mm"]
[ext_resource type="AudioStream" uid="uid://blow1x3f6wmq3" path="res://assets/sounds/ui/click_138.wav" id="4_odfb7"]
[ext_resource type="AudioStream" uid="uid://dxixkunu5t2vf" path="res://assets/music/exploration.ogg" id="5_c7neg"]
[ext_resource type="PackedScene" uid="uid://b6yve7wkmw22" path="res://scenes/option_menu.tscn" id="6_2womk"]
[ext_resource type="PackedScene" uid="uid://bxqhwycjwdq8v" path="res://scenes/codex.tscn" id="7_2ptd3"]
[ext_resource type="PackedScene" uid="uid://b8f1jfottu5qr" path="res://scenes/choose_level.tscn" id="8_tgsc4"]
[ext_resource type="PackedScene" uid="uid://bibmug15nxjgl" path="res://scenes/credits.tscn" id="10_4qjsi"]
[ext_resource type="ButtonGroup" uid="uid://dkhaslcgc0laa" path="res://assets/visual/locale_button_group.tres" id="11_28b5y"]
[ext_resource type="Texture2D" uid="uid://lf05oe1vo6l6" path="res://assets/visual/ui/flag_en.png" id="11_l3ybt"]
[ext_resource type="Texture2D" uid="uid://kpahqasm7ysk" path="res://assets/visual/ui/flag_fr.png" id="12_mlhnj"]
[ext_resource type="Texture2D" uid="uid://emqc0xfwyh4p" path="res://assets/visual/ui/flag_fr_sel.png" id="13_lr1av"]
[ext_resource type="Texture2D" uid="uid://cak8qhaugney7" path="res://assets/visual/ui/flag_en_sel.png" id="15_mnq4j"]

[node name="Menu" type="TextureRect"]
unique_name_in_owner = true
process_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_mxm8n")
script = ExtResource("2_ylufq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 110
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.976471, 0.886275, 0.513726, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_wy6cq")
theme_override_font_sizes/font_size = 80
text = "TOURTOUR"
horizontal_alignment = 1

[node name="Container" type="Container" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="NewGameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 0
theme_override_colors/font_color = Color(0.92549, 0.729412, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_wy6cq")
theme_override_font_sizes/font_size = 30
text = "MAIN_MENU_NEW"
horizontal_alignment = 1

[node name="OptionsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2_wy6cq")
theme_override_font_sizes/font_size = 30
text = "MAIN_MENU_OPTIONS"
horizontal_alignment = 1

[node name="CodexLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2_wy6cq")
theme_override_font_sizes/font_size = 30
text = "MAIN_MENU_CODEX"
horizontal_alignment = 1

[node name="CreditsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2_wy6cq")
theme_override_font_sizes/font_size = 30
text = "MAIN_MENU_CREDITS"
horizontal_alignment = 1

[node name="ExitGameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2_wy6cq")
theme_override_font_sizes/font_size = 30
text = "MAIN_MENU_EXIT"
horizontal_alignment = 1

[node name="GodotIcon" type="Sprite2D" parent="MarginContainer"]
position = Vector2(22.75, 569.25)
scale = Vector2(0.269531, 0.269531)
texture = ExtResource("4_ja5mm")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_odfb7")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_c7neg")
autoplay = true
bus = &"Music"

[node name="OptionsWindow" parent="." instance=ExtResource("6_2womk")]
visible = false
layout_mode = 1

[node name="Codex" parent="." instance=ExtResource("7_2ptd3")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1
is_modal = true

[node name="ChooseLevel" parent="." instance=ExtResource("8_tgsc4")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="Credits" parent="." instance=ExtResource("10_4qjsi")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 67.0
offset_top = 574.0
offset_right = 469.0
offset_bottom = 597.0
theme_override_fonts/font = ExtResource("2_wy6cq")
text = "Tourtour version 1.3"
horizontal_alignment = 2

[node name="Locale_FR" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 71.0
offset_top = 564.0
offset_right = 89.0
offset_bottom = 578.0
toggle_mode = true
action_mode = 0
button_group = ExtResource("11_28b5y")
texture_normal = ExtResource("12_mlhnj")
texture_pressed = ExtResource("13_lr1av")

[node name="Locale_EN" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 51.0
offset_top = 564.0
offset_right = 69.0
offset_bottom = 578.0
toggle_mode = true
action_mode = 0
button_group = ExtResource("11_28b5y")
texture_normal = ExtResource("11_l3ybt")
texture_pressed = ExtResource("15_mnq4j")

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/NewGameLabel" to="." method="_on_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/NewGameLabel" to="." method="select_label" binds= [0]]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/NewGameLabel" to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/OptionsLabel" to="." method="_on_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/OptionsLabel" to="." method="select_label" binds= [1]]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/OptionsLabel" to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/CodexLabel" to="." method="_on_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/CodexLabel" to="." method="select_label" binds= [2]]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/CodexLabel" to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/CreditsLabel" to="." method="_on_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/CreditsLabel" to="." method="select_label" binds= [3]]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/CreditsLabel" to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/ExitGameLabel" to="." method="_on_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/ExitGameLabel" to="." method="select_label" binds= [4]]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/ExitGameLabel" to="." method="_on_mouse_exited"]
[connection signal="hidden" from="OptionsWindow" to="." method="transition_in"]
[connection signal="hidden" from="Codex" to="." method="transition_in"]
[connection signal="hidden" from="ChooseLevel" to="." method="transition_in"]
[connection signal="level_chosen" from="ChooseLevel" to="." method="_on_level_chosen"]
[connection signal="hidden" from="Credits" to="." method="transition_in"]
[connection signal="visibility_changed" from="Credits" to="Credits" method="_on_visibility_changed"]
[connection signal="pressed" from="Locale_FR" to="." method="change_locale" binds= ["fr"]]
[connection signal="pressed" from="Locale_EN" to="." method="change_locale" binds= ["en"]]
